# rust-show-on-map

./: .editorconfig  Cargo.toml  LICENSE  README.md  config.toml  config.yaml
public/: index.html
public/static/css/: map.css
public/static/js/: appModel.js  bindingHandlers.js  components.js  init.js  integerParser.js  localStorage.js  mapModel.js  messageModel.js
public/static/js/components/: ConnectionSettings.html  ConnectionSettings.js  Messages.html  Messages.js  Objects.html  Objects.js  Places.html  Places.js  Roads.html  Roads.js  SelectedNames.html  SelectedNames.js
src/: error.rs  logger.rs  main.rs  settings.rs
src/algorithm/: adjacent.rs  line.rs  link.rs  mod.rs  polygon.rs
src/backend/: error.rs  mod.rs  starter.rs
src/backend/handler/: empty.rs  format.rs  mod.rs  object.rs  place.rs  road.rs  shape.rs  util.rs
src/config/: error.rs  mod.rs
src/database/: client.rs  config.rs  entity.rs  error.rs  factory.rs  mod.rs
