[package]
name = "show-on-map"
version = "0.1.1"
authors = ["Anton Shabanov <snakesolid@ngs.ru>"]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"

[dependencies]
argparse = "0.2"
env_logger = "0.4"
iron = "0.5"
log = "0.3"
mount = "0.3"
postgres = "0.15"
router = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
staticfile = "0.4"
time = "0.1"
toml = "0.4"
