[package]
name = "show-on-map"
version = "0.1.3"
authors = ["Anton Shabanov <snakesolid@ngs.ru>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"

[dependencies]
argparse = "0.2"
env_logger = "0.6"
iron = "0.6"
log = "0.4"
mount = "0.4"
postgres = "0.15"
router = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
staticfile = "0.5"
time = "0.1"
toml = "0.5"
